Fix overlapping h1

--- a/assets/sass/website-container.scss
+++ b/assets/sass/website-container.scss
@@ -7,6 +7,7 @@
     h1 {
         font-size: 3em;
         color: $font_color_1;
+        line-height: 0.9em;
     }
 
     h2 {
